--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v1
       
     - name: Setup Nuget
-      uses: warrenbuckley/Setup-Nuget@v1
+      uses: nuget/setup-nuget@v1
       
     - name: Nuget pack
       run: |
