--- a/src/EC_ExtensibleSaveFormat/packages.config
+++ b/src/EC_ExtensibleSaveFormat/packages.config
@@ -1,16 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BepInEx.Analyzers" version="1.0.3" targetFramework="net46" />
-  <package id="BepInEx.BaseLib" version="5.4.0" targetFramework="net46" />
-  <package id="BepInEx.Core" version="5.4.0" targetFramework="net46" />
-  <package id="HarmonyX" version="2.1.1" targetFramework="net46" />
-  <package id="IllusionLibs.EmotionCreators.Assembly-CSharp" version="2019.6.6" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.EmotionCreators.Assembly-CSharp-firstpass" version="2019.6.6" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.EmotionCreators.IL" version="2019.6.6" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.EmotionCreators.UnityEngine.CoreModule" version="2017.4.24.1" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.EmotionCreators.UnityEngine.IMGUIModule" version="2017.4.24.1" targetFramework="net46" developmentDependency="true" />
-  <package id="Microsoft.Unity.Analyzers" version="1.8.2" targetFramework="net46" developmentDependency="true" />
-  <package id="Mono.Cecil" version="0.11.3" targetFramework="net46" />
-  <package id="MonoMod.RuntimeDetour" version="20.11.5.1" targetFramework="net46" />
-  <package id="MonoMod.Utils" version="20.11.5.1" targetFramework="net46" />
+  <package id="IllusionLibs.BepInEx" version="5.4.4" targetFramework="net46" />
+  <package id="IllusionLibs.BepInEx.Harmony" version="2.2.0.1" targetFramework="net46" />
+  <package id="IllusionLibs.EmotionCreators.Assembly-CSharp" version="2019.6.6.2" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.EmotionCreators.Assembly-CSharp-firstpass" version="2019.6.6.2" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.EmotionCreators.IL" version="2019.6.6.2" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.EmotionCreators.UnityEngine.CoreModule" version="2017.4.24.3" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.EmotionCreators.UnityEngine.IMGUIModule" version="2017.4.24.3" targetFramework="net46" developmentDependency="true" />
+  <package id="Microsoft.Unity.Analyzers" version="1.9.0" targetFramework="net46" developmentDependency="true" />
 </packages>
