--- a/src/EC_Sideloader/packages.config
+++ b/src/EC_Sideloader/packages.config
@@ -1,4 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="IllusionLibs.EmotionCreators.UnityEngine.UnityWebRequestWWWModule" version="2017.4.24.1" targetFramework="net46" developmentDependency="true" />
+  <package id="BepInEx.Analyzers" version="1.0.3" targetFramework="net46" />
+  <package id="IllusionLibs.AIGirl.UnityEngine.ImageConversionModule" version="2018.2.21.3" targetFramework="net46" />
+  <package id="IllusionLibs.BepInEx" version="5.4.4" targetFramework="net46" />
+  <package id="IllusionLibs.BepInEx.Harmony" version="2.2.0.1" targetFramework="net46" />
+  <package id="IllusionLibs.EmotionCreators.Assembly-CSharp" version="2019.6.6.2" targetFramework="net46" />
+  <package id="IllusionLibs.EmotionCreators.Assembly-CSharp-firstpass" version="2019.6.6.2" targetFramework="net46" />
+  <package id="IllusionLibs.EmotionCreators.IL" version="2019.6.6.2" targetFramework="net46" />
+  <package id="IllusionLibs.EmotionCreators.UnityEngine.CoreModule" version="2017.4.24.3" targetFramework="net46" />
+  <package id="IllusionLibs.EmotionCreators.UnityEngine.UnityWebRequestWWWModule" version="2017.4.24.3" targetFramework="net46" developmentDependency="true" />
+  <package id="Microsoft.Unity.Analyzers" version="1.9.0" targetFramework="net46" developmentDependency="true" />
+  <package id="SharpZipLib" version="1.3.1" targetFramework="net46" />
 </packages>
