--- a/src/HS2_Screencap/packages.config
+++ b/src/HS2_Screencap/packages.config
@@ -1,20 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BepInEx.Analyzers" version="1.0.3" targetFramework="net46" />
-  <package id="BepInEx.BaseLib" version="5.4.0" targetFramework="net46" />
-  <package id="BepInEx.Core" version="5.4.0" targetFramework="net46" />
-  <package id="HarmonyX" version="2.1.1" targetFramework="net46" />
-  <package id="IllusionLibs.HoneySelect2.Assembly-CSharp" version="2020.5.29" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.HoneySelect2.Assembly-CSharp-firstpass" version="2020.5.29" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.HoneySelect2.IL" version="2020.5.29" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.HoneySelect2.Sirenix.Serialization" version="2020.5.29" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.HoneySelect2.Unity.Postprocessing.Runtime" version="2018.4.11" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.HoneySelect2.UnityEngine.AssetBundleModule" version="2018.4.11" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.HoneySelect2.UnityEngine.AudioModule" version="2018.4.11" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.HoneySelect2.UnityEngine.CoreModule" version="2018.4.11" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.HoneySelect2.UnityEngine.ScreenCaptureModule" version="2018.4.11" targetFramework="net46" developmentDependency="true" />
-  <package id="Microsoft.Unity.Analyzers" version="1.8.2" targetFramework="net46" developmentDependency="true" />
-  <package id="Mono.Cecil" version="0.11.3" targetFramework="net46" />
-  <package id="MonoMod.RuntimeDetour" version="20.11.5.1" targetFramework="net46" />
-  <package id="MonoMod.Utils" version="20.11.5.1" targetFramework="net46" />
+  <package id="IllusionLibs.BepInEx" version="5.4.4" targetFramework="net46" />
+  <package id="IllusionLibs.BepInEx.Harmony" version="2.2.0.1" targetFramework="net46" />
+  <package id="IllusionLibs.HoneySelect2.Assembly-CSharp" version="2020.5.29.2" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.HoneySelect2.Assembly-CSharp-firstpass" version="2020.5.29.2" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.HoneySelect2.IL" version="2020.5.29.2" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.HoneySelect2.Sirenix.Serialization" version="2020.5.29.2" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.HoneySelect2.Unity.Postprocessing.Runtime" version="2018.4.11.2" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.HoneySelect2.UnityEngine.AssetBundleModule" version="2018.4.11.2" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.HoneySelect2.UnityEngine.AudioModule" version="2018.4.11.2" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.HoneySelect2.UnityEngine.CoreModule" version="2018.4.11.2" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.HoneySelect2.UnityEngine.ScreenCaptureModule" version="2018.4.11.2" targetFramework="net46" developmentDependency="true" />
+  <package id="Microsoft.Unity.Analyzers" version="1.9.0" targetFramework="net46" developmentDependency="true" />
 </packages>
