--- a/src/PH_SliderUnlocker/packages.config
+++ b/src/PH_SliderUnlocker/packages.config
@@ -1,14 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BepInEx.Analyzers" version="1.0.3" targetFramework="net35" />
-  <package id="BepInEx.BaseLib" version="5.4.0" targetFramework="net35" />
-  <package id="BepInEx.Core" version="5.4.0" targetFramework="net35" />
-  <package id="HarmonyX" version="2.1.1" targetFramework="net35" />
-  <package id="IllusionLibs.PlayHome.Assembly-CSharp" version="2018.3.11" targetFramework="net35" developmentDependency="true" />
-  <package id="IllusionLibs.PlayHome.UnityEngine" version="5.5.5" targetFramework="net35" developmentDependency="true" />
-  <package id="IllusionLibs.PlayHome.UnityEngine.UI" version="5.5.5" targetFramework="net35" developmentDependency="true" />
-  <package id="Microsoft.Unity.Analyzers" version="1.8.2" targetFramework="net35" developmentDependency="true" />
-  <package id="Mono.Cecil" version="0.10.4" targetFramework="net35" />
-  <package id="MonoMod.RuntimeDetour" version="20.11.5.1" targetFramework="net35" />
-  <package id="MonoMod.Utils" version="20.11.5.1" targetFramework="net35" />
+  <package id="IllusionLibs.BepInEx" version="5.4.4" targetFramework="net35" />
+  <package id="IllusionLibs.BepInEx.Harmony" version="2.2.0.1" targetFramework="net35" />
+  <package id="IllusionLibs.PlayHome.Assembly-CSharp" version="2018.3.11.2" targetFramework="net35" developmentDependency="true" />
+  <package id="IllusionLibs.PlayHome.UnityEngine" version="5.5.5.2" targetFramework="net35" developmentDependency="true" />
+  <package id="IllusionLibs.PlayHome.UnityEngine.UI" version="5.5.5.2" targetFramework="net35" developmentDependency="true" />
+  <package id="Microsoft.Unity.Analyzers" version="1.9.0" targetFramework="net35" developmentDependency="true" />
 </packages>
