Fix scene ext save in ph2 studio

--- a/src/PH_ExtensibleSaveFormat/packages.config
+++ b/src/PH_ExtensibleSaveFormat/packages.config
@@ -2,8 +2,8 @@
 <packages>
   <package id="BepInEx.Analyzers" version="1.0.3" targetFramework="net35" />
   <package id="BepInEx.BaseLib" version="5.4.0" targetFramework="net35" />
-  <package id="BepInEx.Core" version="5.4.0" targetFramework="net35" />
-  <package id="HarmonyX" version="2.1.1" targetFramework="net35" />
+  <package id="IllusionLibs.BepInEx" version="5.1.0" targetFramework="net35" developmentDependency="true" />
+  <package id="IllusionLibs.BepInEx.Harmony" version="2.0.3.1" targetFramework="net35" developmentDependency="true" />
   <package id="IllusionLibs.PlayHome.Assembly-CSharp" version="2018.3.11" targetFramework="net35" developmentDependency="true" />
   <package id="IllusionLibs.PlayHome.Assembly-CSharp-firstpass" version="2018.3.11" targetFramework="net35" developmentDependency="true" />
   <package id="IllusionLibs.PlayHome.UnityEngine" version="5.5.5" targetFramework="net35" developmentDependency="true" />
