Added extended data for main game saves in KK

--- a/src/KK_ExtensibleSaveFormat/KK_ExtensibleSaveFormat.csproj
+++ b/src/KK_ExtensibleSaveFormat/KK_ExtensibleSaveFormat.csproj
@@ -65,9 +65,11 @@
   <ItemGroup>
     <Compile Include="KK.ExtendedSave.cs" />
     <Compile Include="KK.ExtendedSave.Hooks.cs" />
+    <Compile Include="KK.ExtendedSave.SaveData.Hooks.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="KK.ExtendedSave.SaveData.cs" />
     <None Include="KK_ExtensibleSaveFormat.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
