--- a/src/AI_BGMLoader/packages.config
+++ b/src/AI_BGMLoader/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BepInEx.Analyzers" version="1.0.3" targetFramework="net46" />
+  <package id="BepInEx.Analyzers" version="1.0.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.Assembly-CSharp" version="2020.5.29.2" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.AssetBundleModule" version="2018.2.21.3" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.AudioModule" version="2018.2.21.3" targetFramework="net46" developmentDependency="true" />
