--- a/src/AI_InputUnlocker/packages.config
+++ b/src/AI_InputUnlocker/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BepInEx.Analyzers" version="1.0.3" targetFramework="net46" />
+  <package id="BepInEx.Analyzers" version="1.0.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.CoreModule" version="2018.2.21.3" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.UI" version="2018.2.21.3" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.BepInEx" version="5.4.4" targetFramework="net46" />
