--- a/src/EC_InputUnlocker/packages.config
+++ b/src/EC_InputUnlocker/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BepInEx.Analyzers" version="1.0.3" targetFramework="net46" />
+  <package id="BepInEx.Analyzers" version="1.0.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.BepInEx" version="5.4.4" targetFramework="net46" />
   <package id="IllusionLibs.BepInEx.Harmony" version="2.2.0.1" targetFramework="net46" />
   <package id="IllusionLibs.EmotionCreators.UnityEngine.CoreModule" version="2017.4.24.3" targetFramework="net46" developmentDependency="true" />
