--- a/src/PH_SliderUnlocker/packages.config
+++ b/src/PH_SliderUnlocker/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BepInEx.Analyzers" version="1.0.3" targetFramework="net35" />
+  <package id="BepInEx.Analyzers" version="1.0.4" targetFramework="net35" developmentDependency="true" />
   <package id="IllusionLibs.BepInEx" version="5.4.4" targetFramework="net35" />
   <package id="IllusionLibs.BepInEx.Harmony" version="2.2.0.1" targetFramework="net35" />
   <package id="IllusionLibs.PlayHome.Assembly-CSharp" version="2018.3.11.2" targetFramework="net35" developmentDependency="true" />
