Resolved ManlyMarco's Fix Request. Added more exception handlings for Main-Game ExtendedSave Data Serialization.

--- a/src/AI_Sideloader/AI_Sideloader.csproj
+++ b/src/AI_Sideloader/AI_Sideloader.csproj
@@ -94,7 +94,11 @@
   <ItemGroup>
     <Compile Include="AI.Sideloader.cs" />
     <Compile Include="AI.Sideloader.Hooks.cs" />
+    <Compile Include="AI.Sideloader.ListLoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UniversalAutoResolver\AI.UAR.AIGameResolveInfo.cs" />
+    <Compile Include="UniversalAutoResolver\AI.UAR.cs" />
+    <Compile Include="UniversalAutoResolver\AI.UAR.Hooks.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AI_ExtensibleSaveFormat\AI_ExtensibleSaveFormat.csproj">
